# bloodhound_mcp

./: .env.example  .gitignore  LICENSE  README.md  agent.py  claude.json  client.py  inspector-config.json  main.py  ollama_evaluation.py  pyproject.toml  requirements.txt  test_connection.py  test_mcp_client.py
.github/workflows/: test.yml
examples/: claude.json  envexample
lib/: bloodhound_api.py  test_connection.py
tests/: conftest.py  test_basics.py  test_bloodhound_api.py  test_bloodhound_http.py  test_integration.py  test_main_mcp_tools.py  test_mcp_tools.py
