[project]
name = "bloodhound-mcp"
version = "0.1.0"
description = "MCP for Connecting Claude Desktop to Bloodhound CE"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.3.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.1",
    "requests-mock>=1.12.1",
    "responses>=0.25.7",
]

[tool.black]
target-version = ["py311"]
